# serdex

./: .gitignore  README.md  pyproject.toml
notebooks/metadata/: describe.ipynb
src/serdex/data/: utils.py
src/serdex/db/: mysqlalchemy.py  utils.py
src/serdex/metadata/: explore.py  prompt.py  queries.py
tests/db/: mysqlalchemy.py
tests/metadata/: explore.py
